<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivityPart2">


    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_Sales"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/sale"
            tools:srcCompat="@drawable/sale"
            android:contentDescription="@string/todo1" />

        />
    </RelativeLayout>


    <TextView
        android:id="@+id/text_Items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:text="@string/select_item"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/productImg"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/notebook"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/descriptionProd"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="8dp"
        android:text="@string/other_text"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/OrderPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/order_price"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/OrderPrice"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/curentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/OrderPrice"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/Price"
            android:text="$"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/quantityPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_toEndOf="@id/OrderPrice"
            android:text="@string/ouantity"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/quantityPrice"
            android:layout_marginStart="90dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/OrderPrice"
            android:onClick="minusQuantity"
            android:text="-"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/num_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityPrice"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/minus_button"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/minus_plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/quantityPrice"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/num_quantity"
            android:onClick="plusQuantity"

            android:text="+"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/addTocard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/order"
            android:textAllCaps="true"
            android:onClick="createOrder"
            tools:ignore="UsingOnClickInXml" />
    </RelativeLayout>


</LinearLayout>